--- a/packages/tov-ui/src/input/style/index.less
+++ b/packages/tov-ui/src/input/style/index.less
@@ -10,9 +10,8 @@
   transition: border-color 0.3s ease-in-out;
   cursor: text;
   font-size: 16px;
-  height: 26px;
+  height: 30px;
   line-height: 1;
-
 
   input{
     font-size: inherit;
@@ -20,21 +19,39 @@
     line-height: inherit;
   }
 
+
+  &__prefix{
+    margin-right: 8px;
+  }
+
+  &__suffix{
+      margin-left: 8px;
+  }
+
   &--disabled{
     cursor: not-allowed;
     border-color: var(--tov-input-color-text-disabled, var(--tov-color-text-disabled));
+    color: var(--tov-input-color-text-disabled, var(--tov-color-text-disabled));
     background-color: var(--tov-input-color-bg-disabled, #f5f5f5);
   }
 
   &--large{
     font-size: 18px;
-    height: 32px;
+    height: 36px;
   }
 
   &--small{
     padding: 0 4px;
     font-size: 14px;
-    height: 20px;
+    height: 24px;
+  }
+
+  &--small &__prefix{
+    margin-right: 4px;
+  }
+
+  &--small &__suffix{
+    margin-left: 4px;
   }
 
   &:focus-within{
