--- a/packages/tov-ui/src/tooltip/style/index.less
+++ b/packages/tov-ui/src/tooltip/style/index.less
@@ -1,1 +1,11 @@
 @import "../../style/index.less";
+
+.tov-tooltip{
+  background: var(--tov-tooltip-bg, rgba(0,0,0,.85));
+  font-size: 14px;
+  padding: 4px 8px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: 0 6px 16px 0 rgba(0,0,0,.08), 0 3px 6px -4px rgba(0,0,0,.12), 0 9px 28px 8px rgba(0,0,0,.05);
+  color: var(--tov-tooltip-text-color, #fff);
+}
