feat: add column

--- a/packages/tov-ui/src/table/style/index.less
+++ b/packages/tov-ui/src/table/style/index.less
@@ -1,2 +1,9 @@
 @import "../../style/index.less";
 @import "./header.less";
+.tov-table {
+
+  &-cell {
+    padding: 16px 16px;
+    border-bottom: 1px solid var(--tov-table-border-color, #f0f0f0);
+  }
+}
