--- a/packages/tov-ui/src/table/style/header.less
+++ b/packages/tov-ui/src/table/style/header.less
@@ -1,3 +1,23 @@
 .tov-table-header{
+  box-sizing: border-box;
 
+  &-cell{
+    position: relative;
+    background: #fafafa;
+
+
+    &:not(:last-child){
+      &::before{
+        content:"";
+        position: absolute;
+        top: 50%;
+        width: 1px;
+        height: 1.5em;
+        right: 0;
+        background: var(--tov-table-border-color, #f0f0f0);
+        transform: translateY(-50%);
+      }
+    }
+
+  }
 }
